--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,12 @@ readme = "pypi_readme.md"
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
 networkx = "^2.6.3"
-matplotlib = "^3.4.3"
-numpy = "^1.21.2"
+matplotlib = "^3.5.1"
+numpy = "^1.22.0"
 pygraphviz = { version = "^1.7", optional = true }
-Pillow = "^8.3.2"
+Pillow = "^9.0.0"
 loguru = "^0.5.3"
-torch = "^1.10.0"
+torch = "^1.10.1"
 setuptools = "*"
 concrete-compiler = "^0.1.1"
 
@@ -53,34 +53,34 @@ full = ["pygraphviz"]
 extras = ["pygraphviz"]
 
 [tool.poetry.dev-dependencies]
-isort = "^5.9.3"
-black = "^21.9b0"
+isort = "^5.10.1"
+black = "^21.12b0"
 pylint = "2.11.1"
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
-mypy = "0.910"
+mypy = "0.931"
 pydocstyle = "^6.1.1"
 jupyter = "^1.0.0"
-flake8 = "^3.9.2"
-flake8-bugbear = "^21.9.2"
+flake8 = "^4.0.1"
+flake8-bugbear = "^21.11.29"
 nbsphinx = "0.8.7"
 tqdm = "^4.62.3"
-psutil = "^5.8.0"
+psutil = "^5.9.0"
 py-cpuinfo = "^8.0.0"
-python-dotenv = "^0.19.0"
-nbmake = "^0.9"
-python-semantic-release = "7.19.2"
+python-dotenv = "^0.19.2"
+nbmake = "^1.1"
+python-semantic-release = "7.23.0"
 semver = "^2.13.0"
 tomlkit = "^0.7.0"
-GitPython = "^3.1.24"
-pytest-xdist = "^2.4.0"
-pytest-randomly = "^3.10.1"
+GitPython = "^3.1.26"
+pytest-xdist = "^2.5.0"
+pytest-randomly = "^3.11.0"
 pygments-style-tomorrow = "^1.0.0"
 beautifulsoup4 = "^4.10.0"
 pip-licenses = "^3.5.3"
 sphinx-zama-theme = "2.0.8"
-scikit-learn = "1.0.1"
-pandas = "1.3.4"
+scikit-learn = "^1.0.2"
+pandas = "^1.3.5"
 pip-audit = "^1.1.1"
 pytest-codeblocks = "^0.12.2"
 py-progress-tracker = "^0.3.3"
