--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,3 +90,8 @@ filterwarnings = [
 [tool.semantic_release]
 version_toml = "pyproject.toml:tool.poetry.version"
 upload_to_pypi = "False"
+
+[tool.ruff]
+line-length = 100
+select = ["F", "E", "W", "C90", "I", "UP", "N", "YTT", "S", "BLE", "FBT", "B", "A", "C4", "T10", "EM", "ICN", "Q", "RET", "SIM", "TID", "ARG", "DTZ", "ERA", "PD", "PGH", "PLC", "PLE", "PLR", "PLW", "RUF"]
+ignore = ["D", "T20", "ANN", "N806", "ARG001", "S101", "BLE001"]
