--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -689,18 +689,11 @@ jobs:
           fi
 
       - name: Push package to PyPi
-        if: ${{ success() && !cancelled() && !fromJSON(env.IS_PRERELEASE) }}
+        if: ${{ success() && !cancelled() }}
         run: |
           poetry run twine upload \
           -u __token__ -p ${{ secrets.PYPI_BOT_TOKEN }} \
           -r pypi "${{ env.ARTIFACTS_PACKAGED_DIR }}"/*.whl
-
-      - name: Push package to Internal PyPi
-        if: ${{ success() && !cancelled() && fromJSON(env.IS_PRERELEASE) }}
-        run: |
-          poetry run twine upload \
-          -u "${{ secrets.INTERNAL_PYPI_BOT_USERNAME }}" -p "${{ secrets.INTERNAL_PYPI_BOT_PASSWORD }}" \
-          --repository-url "${{ secrets.INTERNAL_PYPI_URL }}" "${{ env.ARTIFACTS_PACKAGED_DIR }}"/*.whl
 
       - name: Create GitHub release
         if: ${{ success() && !cancelled() }}
