--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ pip-audit = "^1.1.1"
 pytest-codeblocks = "^0.12.2"
 twine = "^3.7.1"
 ruff = "^0.0.191"
+requests = "^2.28.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
