--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ numpy = "^1.21.0"
 Pillow = "^9.0.0"
 concrete-compiler = "^0.23.4"
 torch = "^1.13.1"
+scipy = "1.7.3"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
