--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,14 +37,19 @@ readme = "README.md"
 "Discourse" = "https://community.zama.ai/c/concrete-numpy/7"
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = ">=3.7,<3.12"
 networkx = "^2.6.3"
 matplotlib = "^3.5.1"
-numpy = "^1.21.0"
-Pillow = "^9.0.0"
-concrete-compiler = "^0.23.4"
+numpy = [
+    {version = "^1.23.5", python = ">=3.8.0"},
+    {version = "1.21.6", python = "<3.8.0"}
+]
+concrete-compiler = "0.24.0rc5"
 torch = "^1.13.1"
-scipy = "1.7.3"
+scipy = [
+    {version = "^1.10.1", python = ">=3.8.0"},
+    {version = "1.7.3", python = "<3.8.0"}
+]
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
@@ -84,6 +89,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 filterwarnings = [
     "error",
+    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
     "ignore:Implicitly cleaning up:ResourceWarning",
     "ignore:pandas not found, skipping conversion test.:ImportWarning",
     "ignore:scipy not found, skipping conversion test.:ImportWarning",
