chore: bump mypy to ^v1.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ black = "^22.3.0"
 pylint = "2.11.1"
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
-mypy = "0.931"
+mypy = "^1.0"
 pydocstyle = "^6.1.1"
 jupyter = "^1.0.0"
 flake8 = "^4.0.1"
