--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,11 +40,16 @@ readme = "README.md"
 python = ">=3.7,<3.11"
 networkx = "^2.6.3"
 matplotlib = "^3.5.1"
-numpy = "^1.21.0"
-Pillow = "^9.0.0"
+numpy = [
+    {version = "^1.23.5", python = ">=3.8"},
+    {version = "1.21.6", python = "<3.8"}
+]
 concrete-compiler = "^0.23.4"
 torch = "^1.13.1"
-scipy = "1.7.3"
+scipy = [
+    {version = "^1.10.1", python = ">=3.8"},
+    {version = "1.7.3", python = "<3.8"}
+]
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
